kubernetes/homepage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-09-08T21:22:00-04:00'
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.4.0
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: writable-next
              mountPath: /app/.next
            - name: config-dir
              mountPath: /app/config
      volumes:
        - name: writable-next
          emptyDir: {}
        - name: config-dir
          emptyDir: {}
        - name: config-bookmarks
          configMap:
            name: homepage-bookmarks
        - name: config-services
          configMap:
            name: homepage-services
        - name: config-widgets
          configMap:
            name: homepage-widgets
        - name: config-settings
          configMap:
            name: homepage-settings
